Fix text size issue on mobile device

--- a/resources/css/smallscreen.css
+++ b/resources/css/smallscreen.css
@@ -1,7 +1,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    
 }
 
 h1,
@@ -137,7 +137,7 @@ nav {
   .collapsable-menu li {
     font-size: 2em;
     font-family: "Optima", sans-serif;
-    padding-bottom: 0.15em;
+    padding-bottom: 1em;
     padding-right: 1em;
   }
   .collapsable-menu a {
@@ -149,7 +149,7 @@ nav {
   .collapsable-menu label {
         font-family: "Optima", sans-serif;
       font-size: 2em;
-      padding-bottom: 0.25em;
+      padding-bottom: 0.5em;
   
       display: block;
       cursor: pointer;
@@ -263,6 +263,10 @@ hr {
     margin-top: 1.5em;
     margin-right: 1em;
 }
+.work {
+    max-width: 100%;
+    
+}
 .work h2{
     margin: 2em 0em 0em 0em;
     letter-spacing: 0.05em;
@@ -270,49 +274,33 @@ hr {
     color:#0b1b2a;
 }
 
-.row {
-    margin: 8px -16px;
+[data-component="slideshow"] .slide {
+    display: none;
   }
-  
-  /* Add padding BETWEEN each column (if you want) */
-  .row,
-  .row > .column {
-    padding: 8px;
-  }
-  
-  /* Create four equal columns that floats next to each other */
-  .column {
-    float: left;
-    width: 25%;
-  }
-  
-  /* Clear floats after rows */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Content */
-  .content {
-    background-color: white;
-    padding: 10px;
-  }
-  
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 900px) {
-    .column {
-      width: 50%;
-    }
-  }
-  
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-    }
-  }
-  .row img {
-      max-width:0%;
-      max-height: auto;
-  }
+
+  [data-component="slideshow"] .slide.active {
+    display: block;
+}
+
+.work #slideshow-example {
+    max-width: 100%;
+    height: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    
+}
+.work img {
+    width: 15em;
+    height: auto;
+    border-radius: 35%;
+}
+footer {
+    display: flex;
+    justify-content: center;
+    padding-top: 1em;
+}
+footer span {
+    font-size: 2em;
+    font-weight: bold;
+}
